futures/testcrate/ui/unresolved-type.stderr
error[E0412]: cannot find type `Left` in this scope
 --> $DIR/unresolved-type.rs:8:20
  |
8 | fn foo() -> Result<Left, u32> {
  |                    ^^^^ not found in this scope
  |
  = help: there is an enum variant `futures::__rt::core::fmt::Alignment::Left`, try using `futures::__rt::core::fmt::Alignment`?
  = help: there is an enum variant `futures::future::Either::Left`, try using `futures::future::Either`?
  = help: there is an enum variant `std::fmt::rt::v1::Alignment::Left`, try using `std::fmt::rt::v1::Alignment`?

error[E0412]: cannot find type `Left` in this scope
  --> $DIR/unresolved-type.rs:12:23
   |
12 | #[async_stream(item = Left)]
   |                       ^^^^ not found in this scope
   |
   = help: there is an enum variant `futures::__rt::core::fmt::Alignment::Left`, try using `futures::__rt::core::fmt::Alignment`?
   = help: there is an enum variant `futures::future::Either::Left`, try using `futures::future::Either`?
   = help: there is an enum variant `std::fmt::rt::v1::Alignment::Left`, try using `std::fmt::rt::v1::Alignment`?

error[E0907]: type inside generator must be known in this context
  --> $DIR/unresolved-type.rs:12:1
   |
12 | #[async_stream(item = Left)]
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
note: the type is part of the generator because of this `yield`
  --> $DIR/unresolved-type.rs:12:1
   |
12 | #[async_stream(item = Left)]
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: aborting due to 3 previous errors

Some errors occurred: E0412, E0907.
For more information about an error, try `rustc --explain E0412`.
